--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #database connection
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://database-2.cdqr5zvuo4cp.ap-south-1.rds.amazonaws.com/lab_session
+spring.datasource.username=admin
+spring.datasource.password=XCNnJ0F5XYaaLuXTXyo2
 
 
 
@@ -13,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 app.jwtSecret=JWTSecretKey
-app.jwtExpirationMs=60000
+app.jwtExpirationMs=6000000
